# azure-agentic-infraops-accelerator

./: .gitignore  .markdown-link-check.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  QUALITY_SCORE.md  README.md  VERSION.md  lefthook.yml  mkdocs.yml  my_diff.diff  package-lock.json  package.json
.devcontainer/: README.md  devcontainer.json  post-create.sh  post-start.sh  update-tools.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  copilot-agent-task.yml  infrastructure-request.yml  scenario-request.yml
.github/agents/: 01-conductor-fastpath.agent.md  01-conductor.agent.md  02-requirements.agent.md  03-architect.agent.md  04-design.agent.md  05b-bicep-planner.agent.md  05t-terraform-planner.agent.md  06b-bicep-codegen.agent.md  06t-terraform-codegen.agent.md  07b-bicep-deploy.agent.md  07t-terraform-deploy.agent.md  08-as-built.agent.md  09-diagnose.agent.md  10-challenger.agent.md  11-context-optimizer.agent.md
.github/agents/_subagents/: bicep-review-subagent.agent.md  (+3 more)
.github/data/: azure-deprecations.json
.github/instructions/: agent-definitions.instructions.md  agent-skills.instructions.md  azure-artifacts.instructions.md  bicep-code-best-practices.instructions.md  bicep-policy-compliance.instructions.md  code-commenting.instructions.md  code-review.instructions.md  cost-estimate.instructions.md  github-actions.instructions.md  governance-discovery.instructions.md  iac-cost-repeatability.instructions.md  markdown.instructions.md  terraform-code-best-practices.instructions.md  terraform-policy-compliance.instructions.md
.github/prompts/: context-optimize.prompt.md  plan-agenticWorkflowOverhaul.prompt.md  plan-docsPeerReview.prompt.md
.github/workflows/: weekly-upstream-sync.yml
agent-output/my-webapp/: 00-session-state.json  01-requirements.md  02-architecture-assessment.md  02-waf-research.tmp.md  02-waf-scores.py  03-des-cost-distribution.py  03-des-cost-estimate.md  03-des-cost-projection.py  README.md  challenge-findings-architecture-pass1.json  challenge-findings-cost-estimate.json  challenge-findings-requirements.json
docs/: CHANGELOG.md  CONTRIBUTING.md  GLOSSARY.md  dev-containers.md  faq.md  index.md  quickstart.md  troubleshooting.md  workflow.md
docs/exec-plans/: README.md  tech-debt-tracker.md
docs/how-it-works/: agents.md  architecture.md  four-pillars.md  index.md  mcp-integration.md  skills-and-instructions.md  workflow-engine.md
docs/prompt-guide/: best-practices.md  index.md  reference.md  workflow-prompts.md
mcp/azure-pricing-mcp/: pyproject.toml
mcp/azure-pricing-mcp/src/azure_pricing_mcp/: client.py  config.py  formatters.py  handlers.py  tools.py
mcp/azure-pricing-mcp/src/azure_pricing_mcp/services/: retirement.py
mcp/azure-pricing-mcp/tests/: test_client_http.py  test_optimizations.py
scripts/: check-docs-freshness.mjs  diff-context-baseline.sh  snapshot-agent-context.sh  validate-agent-body-size.mjs  validate-agent-frontmatter.mjs  validate-agent-registry.mjs  validate-artifact-templates.mjs  validate-glob-audit.mjs  validate-governance-refs.mjs  validate-h2-sync.mjs  validate-instruction-references.mjs  validate-mcp-config.mjs  validate-no-deprecated-refs.mjs  validate-orphaned-content.mjs  validate-session-lock.mjs  validate-session-state.mjs  validate-skill-affinity.mjs  validate-skill-references.mjs  validate-skill-size.mjs  validate-skills-format.mjs  validate-workflow-graph.mjs
scripts/_lib/: parse-frontmatter.mjs  paths.mjs  reporter.mjs
(+100 files in other folders)
